--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "name" : "Force Facebook",
-  "version" : "0.1",
+  "version" : "0.2",
   "description" : "Forces Facebook to always view your News Feed in Most Recent view.",
   "content_scripts": [{
-      "matches": ["*://*.facebook.com/*"],
+      "matches": ["*://*.facebook.com/", "*://*.facebook.com/?*"],
       "js": ["content.js"],
-      "run_at": "document_start"
+      "run_at": "document_end"
   }],
   "manifest_version": 2
 }
